k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: heart-disease
  labels:
    name: heart-disease
    app.kubernetes.io/part-of: heart-disease-mlops
